Variable name and test assertion update
Co-authored-by: jeremy-then <94636474+jeremy-then@users.noreply.github.com>
Co-authored-by: Antonio Pancorbo <48168255+apancorb@users.noreply.github.com>